draft page with content relations

--- a/index.html
+++ b/index.html
@@ -9,11 +9,13 @@
   <link rel="stylesheet" href="./style.css">
 
 <body>
-  <div class="first_page">
+
+
+  <section class="first_page">
     <header class="header flex_container">
       <div class="logo">ReMotely</div>
       <nav class="nav flex_container">
-        <div class="flex_container"><a href="#">book</a><a href="#">explore</a><a href="#">about</a></div>
+        <div class="link_flex_container"><a href="#">book</a><a href="#">explore</a><a href="#">about</a></div>
         <div><a href="#">sign in</a></div>
       </nav>
     </header>
@@ -24,10 +26,15 @@
       <button class="btn" type="submit">Explore</button>
       <img class="main_photo" src="switzphoto.jpg" alt="chatka ze Szwajcarii">
     </div>
-  </div>
+  </section>
 
 
-  <div class="second_page_container">
+
+
+
+  
+
+  <section class="second_page_container">
     <div class="paragraph">
       <p>We offer a handpicked range of cabins for nature lovers in Europeto live and work from for desired time.</p>
     </div>
@@ -58,8 +65,8 @@
         </div>
       </div>
     </div>
-  </div>
-  <div class="third_page_container">
+  </section>
+  <section class="third_page_container">
     <div class="left_side">
       <div class="some_text">
         <header class="third_page_header">Work from somewhere special</header>
@@ -73,8 +80,8 @@
     <div class="right_side">
       <img class="mountains_pic" src="mountain_home.png" alt="widok na góry">
     </div>
-  </div>
-  <div class="fourth_page_container">
+  </section>
+  <section class="fourth_page_container">
     <div class="left_side_fourth_page">
       <div><img class="girl_pic" src="girl.png" alt="zdjęcie dziewczyny"></div>
       <div class="newsletter">
@@ -84,12 +91,23 @@
     </div>
     <div class="right_side_fourth_page">
       <h1 class="cabin_lovers">+2,000<br>cabin lovers</h1>
-      <p class="fourth_page_footer">Marina Skovic, Visual Artist</p>
+      <footer class="fourth_page_footer">Marina Skovic, Visual Artist</footer>
       <div class="bot_nav_container">
-        <nav class="bot_nav"></nav>
+        <nav class="bot_nav">
+          <p class="nav">Help Center</p>
+          <p class="nav">About</p>
+          <p class="nav">Facebook</p>
+          <p class="nav">FAQ</p>
+          <p class="nav">Contact</p>
+          <p class="nav">Instagram</p>
+          <p class="nav">Blog</p>
+          <p class="nav">Reviews</p>
+          <p class="nav">Twitter</p>
+        </nav>
       </div>
     </div>
-  </div>
+    <footer class="last_footer"><small><p>&#169 2020 Remotely</p><p>Privacy Policy</p><p>Terms and Conditions</p></footer></small>
+  </section>
 
 </body>
 
