--- a/index.html
+++ b/index.html
@@ -23,10 +23,12 @@
 
     <div class="catch_phrase">
       <h1>Work from a Cabin near Helsinki</h1>
-      <button class="btn" type="submit">Explore</button>
+      </div>
+      
+      <div class="button_photo">
       <img class="main_photo" src="switzphoto.jpg" alt="chatka ze Szwajcarii">
-    </div>
-  </section>
+      <button class="btn" type="submit">Explore</button>
+  </section></div>
 
 
 
