--- a/index.html
+++ b/index.html
@@ -7,34 +7,38 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Figma Project</title>
   <link rel="stylesheet" href="./style.css">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 
 <body>
 
 
+  <header class="header flex_container">
+    <div class="logo">ReMotely</div>
+    <nav class="nav flex_container">
+      <div class="link_flex_container"><a class="links" href="#">book</a><a class="links" href="#">explore</a><a
+          class="links" href="#">about</a></div>
+      <div class="sign_container"><a class="sign" href="#">sign in</a></div>
+    </nav>
+  </header>
+
   <section class="first_page">
-    <header class="header flex_container">
-      <div class="logo">ReMotely</div>
-      <nav class="nav flex_container">
-        <div class="link_flex_container"><a href="#">book</a><a href="#">explore</a><a href="#">about</a></div>
-        <div><a href="#">sign in</a></div>
-      </nav>
-    </header>
-
-
+    <div class="column phrase">
     <div class="catch_phrase">
-      <h1>Work from a Cabin near Helsinki</h1>
-      </div>
-      
-      <div class="button_photo">
+      <h1>Work from <br> a Cabin near Helsinki</h1>
+    </div></div>
+    <div class="column cottage">
+    <div class="photo">
       <img class="main_photo" src="switzphoto.jpg" alt="chatka ze Szwajcarii">
-      <button class="btn" type="submit">Explore</button>
   </section></div>
+  </div>
+  <button class="btn" type="submit">Explore</button>
 
 
 
 
 
-  
+
 
   <section class="second_page_container">
     <div class="paragraph">
@@ -108,7 +112,11 @@
         </nav>
       </div>
     </div>
-    <footer class="last_footer"><small><p>&#169 2020 Remotely</p><p>Privacy Policy</p><p>Terms and Conditions</p></footer></small>
+    <footer class="last_footer"><small>
+        <p>&#169 2020 Remotely</p>
+        <p>Privacy Policy</p>
+        <p>Terms and Conditions</p>
+    </footer></small>
   </section>
 
 </body>
