fix some mistakes finish button

--- a/index.html
+++ b/index.html
@@ -16,24 +16,29 @@
   <header class="header flex_container">
     <div class="logo">ReMotely</div>
     <nav class="nav flex_container">
-      <div class="link_flex_container"><a class="links" href="#">book</a><a class="links" href="#">explore</a><a
-          class="links" href="#">about</a></div>
+      <div class="link_flex_container"><a class="links" href="#">book</a><a class="links" href="#">explore</a>
+        <a class="links" href="#">about</a>
+      </div>
       <div class="sign_container"><a class="sign" href="#">sign in</a></div>
     </nav>
   </header>
 
   <section class="first_page">
     <div class="column phrase">
-    <div class="catch_phrase">
-      <h1>Work from <br> a Cabin near Helsinki</h1>
-    </div></div>
+      <div class="catch_phrase">
+        <h1>Work from <br> a Cabin near Helsinki</h1>
+      </div>
+    </div>
     <div class="column cottage">
-    <div class="photo">
-      <img class="main_photo" src="switzphoto.jpg" alt="chatka ze Szwajcarii">
-  </section></div>
+      <div class="photo">
+        <img class="main_photo" src="switzphoto.jpg" alt="chatka ze Szwajcarii">
+      </div>
+  </section>
   </div>
-  <button class="btn" type="submit">Explore</button>
-
+  </div>
+  <div class=button_container>
+    <button class="btn" type="submit"><span class="exp">Explore</span></button>
+  </div>
 
 
 
@@ -116,7 +121,7 @@
         <p>&#169 2020 Remotely</p>
         <p>Privacy Policy</p>
         <p>Terms and Conditions</p>
-    </footer></small>
+      </small></footer>
   </section>
 
 </body>
