third section  finish

--- a/index.html
+++ b/index.html
@@ -112,17 +112,15 @@
           If your job is fully <br> remote and you daydream of holidays, then why <br> sit at home? Work as you normally do and
           later <br> let yourself dive into nature. Break the habit.</p>
       </div>
+      <div class="btn_third_sector">
+        <button class="book_now" type="submit"><span class="book">Book Now</span></button>
+      </div>
     </div>
-
-    
-
     <div class="right_side">
       <img class="mountains_pic" src="mountain_home.png" alt="widok na góry">
     </div>
   </section>
-  <div class="btn">
-    <button>Book now</button>
-  </div>
+  
 
 
 
