fourth section finish

--- a/index.html
+++ b/index.html
@@ -128,9 +128,7 @@
   <section class="fourth_page_container">
     <div class="left_side_fourth_page">
       <div><img class="girl_pic" src="girl.png" alt="zdjęcie dziewczyny"></div>
-      <div class="newsletter">
-        <label for="newsletter_header"> newsletter comming soon</label>
-        <input type="email" class="email" placeholder="your e-mail address">
+     
       </div>
     </div>
 
@@ -139,8 +137,20 @@
 
     
     <div class="right_side_fourth_page">
-      <h1 class="cabin_lovers">+2,000<br>cabin lovers</h1>
+      <div class="fan_number">
+      <p class="cabin_lovers">+2,000<br>cabin lovers</p>
+    </div>
+    <div class="autor">
       <footer class="fourth_page_footer">Marina Skovic, Visual Artist</footer>
+    </div>
+    </section>
+
+
+
+    <section class="fifth_page_container">
+      <div class="newsletter">
+        <label for="newsletter_header"> newsletter comming soon</label>
+        <input type="email" class="email" placeholder="your e-mail address">
       <div class="bot_nav_container">
         <nav class="bot_nav">
           <p class="nav">Help Center</p>
@@ -160,7 +170,7 @@
         <p>Privacy Policy</p>
         <p>Terms and Conditions</p>
       </small></footer>
-  </section>
+    </section>
 
 </body>
 
