--- a/index.html
+++ b/index.html
@@ -23,33 +23,29 @@
     </nav>
   </header>
 
-  <div class="section_wrapper">
-    <div class="column phrase">
-      <div class="catch_phrase">
-        <h1>Work from <br> a cabin near Helsinki</h1>
+
+  <section class="section section_hero">
+    <div class="section_container">
+      <div class="column phrase">
+        <div class="catch_phrase">
+          <h1>Work from <br> a cabin near Helsinki</h1>
+        </div>
+      </div>
+      <div class="column cottage">
+        <div class="photo">
+          <img class="main_photo" src="switzphoto.jpg" alt="chatka ze Szwajcarii">
+        </div>
       </div>
     </div>
-    <div class="column cottage">
-      <div class="photo">
-        <img class="main_photo" src="switzphoto.jpg" alt="chatka ze Szwajcarii">
-      </div>
+    <div class=button_container>
+      <button class="btn" type="submit">Explore</button>
     </div>
-  </div>
-  </div>
-  <div class=button_container>
-    <button class="btn" type="submit"><span class="exp">Explore</span></button>
-  </div>
+  </section>
 
-
-
-
-  <div class="container_for_paragraph">
-    <div class="paragraph">
-      <p class="size_paragraph">We offer a handpicked range of cabins for nature lovers in Europe to live <br> and work
-        from for desired time.</p>
-    </div>
-  </div>
-  <section class="second_page_container">
+  <!-- reuse section class -->
+  <section class="section second_page_container">
+    <h2 class="section_title">We offer a handpicked range of cabins for nature lovers in Europe to live and work
+      from for desired time.</h2>
     <div class="all_pros_container">
 
       <div class="pros_container">
@@ -203,18 +199,18 @@
 
 
   <div class="last_footer_wrapper">
-    
-      <footer class="last_footer">
-        <div class="footer_box">
-          <p class="footer_par">&#169 2020 Remotely</p>
-        </div>
-        <div class="footer_box privacy">
-          <p class="footer_par">Privacy Policy</p>
-        </div>
-        <div class="footer_box">
-          <p class="footer_par">Terms and Conditions</p>
-        </div>
-      </footer>
+
+    <footer class="last_footer">
+      <div class="footer_box">
+        <p class="footer_par">&#169 2020 Remotely</p>
+      </div>
+      <div class="footer_box privacy">
+        <p class="footer_par">Privacy Policy</p>
+      </div>
+      <div class="footer_box">
+        <p class="footer_par">Terms and Conditions</p>
+      </div>
+    </footer>
   </div>
 </body>
 
