fix almost all problems

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <div class="section_container">
       <div class="column phrase">
         <div class="catch_phrase">
-          <h1>Work from <br> a cabin near Helsinki</h1>
+          <h1 class="invite_phrase">Work from <br> a cabin near Helsinki</h1>
         </div>
       </div>
       <div class="column cottage">
@@ -42,7 +42,7 @@
     </div>
   </section>
 
-  <!-- reuse section class -->
+ 
   <section class="section second_page_container">
     <h2 class="section_title">We offer a handpicked range of cabins for nature lovers in Europe to live and work
       from for desired time.</h2>
