add some corrections with proper footer, proper nav, h3 on second page

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
           <div class="pros_photo"><img class="pros_pic" src="forest.png" alt="zdjęcie zalet"></div>
 
           <div class="header_container">
-            <header class="paragraph_header">Connection</header>
+            <h3 class="paragraph_header">Connection</h3>
           </div>
 
 
@@ -68,7 +68,7 @@
           <div class="pros_photo high_way"><img class="pros_pic" src="highway.png" alt="zdjęcie zalet"></div>
 
           <div class="header_container">
-            <header class="paragraph_header">Accesibility</header>
+            <h3 class="paragraph_header">Accesibility</h3>
           </div>
 
 
@@ -83,7 +83,7 @@
           <div class="pros_photo"><img class="pros_pic" src="mountains.png" alt="zdjęcie zalet"></div>
 
           <div class="header_container">
-            <header class="paragraph_header">Close to nature</header>
+            <h3 class="paragraph_header">Close to nature</h3>
           </div>
 
           <div class="paragraph_description">
@@ -158,35 +158,21 @@
     </div>
 
     <div class="bot_nav_container">
-      <nav class="bot_nav">
-        <div class="nav_container">
-          <p class="nav">Help Center</p>
-        </div>
-        <div class="nav_container">
-          <p class="nav">Facebook</p>
-        </div>
-        <div class="nav_container">
-          <p class="nav">About</p>
-        </div>
-        <div class="nav_container">
-          <p class="nav">FAQ</p>
-        </div>
-        <div class="nav_container">
-          <p class="nav">Contact</p>
-        </div>
-        <div class="nav_container">
-          <p class="nav">Instagram</p>
-        </div>
-        <div class="nav_container">
-          <p class="nav">Blog</p>
-        </div>
-        <div class="nav_container">
-          <p class="nav">Reviews</p>
-        </div>
-        <div class="nav_container">
-          <p class="nav">Twitter</p>
-        </div>
-      </nav>
+      
+        <ul class="ul_container">
+          <li class="nav">Help Center</li>
+          <li class="nav">Facebook</li>
+          <li class="nav">About</li>
+        </ul>
+        <ul class="ul_container">
+          <li class="nav">FAQ</li>
+          <li class="nav">Contact</li>
+          <li class="nav">Instagram</li>
+        </ul>
+        <ul class="ul_container">
+          <li class="nav">Blog</li>
+          <li class="nav">Reviews</li>
+          <li class="nav">Twitter</li>
     </div>
 
   </section>
@@ -202,14 +188,11 @@
 
     <footer class="last_footer">
       <div class="footer_box">
-        <p class="footer_par">&#169 2020 Remotely</p>
-      </div>
-      <div class="footer_box privacy">
-        <p class="footer_par">Privacy Policy</p>
-      </div>
-      <div class="footer_box">
-        <p class="footer_par">Terms and Conditions</p>
-      </div>
+        <ul class="footer_list">
+        <li class="footer_par"><a href="#">&#169 2020 Remotely</li></a>
+        <li class="footer_par"><a href="#">Privacy Policy</li></a>
+        <li class="footer_par"><a href="#">Terms and Conditions</li></a>
+      </ul></div>
     </footer>
   </div>
 </body>
