finish some size and forgotten part of the page problem also with proper lists at the end

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
   <section class="third_page_container">
     <div class="left_side">
       <div class="some_text">
-        <h3 class="third_page_header">Work from somewhere special</h3>
+        <h2 class="third_page_header">Work from somewhere special</h2>
         <p class="longer_paragraph">We gather people who love nature and <br> mountains and help them find perfect spots
           for <br> a few weeks or even
           months.
@@ -140,6 +140,12 @@
       </div>
       <div class="autor">
         <footer class="fourth_page_footer">Marina Skovic, Visual Artist</footer>
+        
+        <ul class="unordered_list_for_numbers">
+          <li class="numbers_fourth_page"><a class="anchor_number" href="#">1</li></a>
+          <li class="numbers_fourth_page"><a class="anchor_number" href="#">2</li></a>
+          <li class="numbers_fourth_page"><a class="anchor_number" href="#">3</li></a>
+        </ul>
       </div>
   </section>
 
