--- a/index.html
+++ b/index.html
@@ -9,8 +9,14 @@
   <link rel="stylesheet" href="./style.css">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+</head>
 
 <body>
+
+
+
+<div class="whole_page_wrapper">
+
 
 
   <header class="header flex_container">
@@ -29,6 +35,9 @@
       <div class="column phrase">
         <div class="catch_phrase">
           <h1 class="invite_phrase">Work from <br> a cabin near Helsinki</h1>
+          <div class=button_container>
+            <button class="btn" type="submit">Explore</button>
+          </div>
         </div>
       </div>
       <div class="column cottage">
@@ -37,9 +46,7 @@
         </div>
       </div>
     </div>
-    <div class=button_container>
-      <button class="btn" type="submit">Explore</button>
-    </div>
+    
   </section>
 
  
@@ -128,7 +135,7 @@
       <div><img class="girl_pic" src="girl.png" alt="zdjęcie dziewczyny"></div>
 
     </div>
-    </div>
+    
 
 
 
@@ -146,7 +153,7 @@
           <li class="numbers_fourth_page"><a class="anchor_number" href="#">2</li></a>
           <li class="numbers_fourth_page"><a class="anchor_number" href="#">3</li></a>
         </ul>
-      </div>
+      </div></div>
   </section>
 
 
@@ -202,7 +209,5 @@
     </footer>
   </div>
 </body>
-
-
-
+</div>
 </html>
