auto margin for whole page

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 
 
 
-  <section class="third_page_container">
+  <section class="section third_page_container">
     <div class="left_side">
       <div class="some_text">
         <h2 class="third_page_header">Work from somewhere special</h2>
@@ -130,7 +130,7 @@
 
 
 
-  <section class="fourth_page_container">
+  <section class="section fourth_page_container">
     <div class="left_side_fourth_page">
       <div><img class="girl_pic" src="girl.png" alt="zdjęcie dziewczyny"></div>
 
@@ -158,7 +158,7 @@
 
 
 
-  <section class="fifth_page_container">
+  <section class="section fifth_page_container">
     <div class="newsletter">
       <div class="input_newsletter">
         <div class="input_header">
@@ -196,7 +196,7 @@
 
 
 
-
+<section class="section">
   <div class="last_footer_wrapper">
 
     <footer class="last_footer">
@@ -207,6 +207,7 @@
         <li class="footer_par"><a href="#">Terms and Conditions</li></a>
       </ul></div>
     </footer>
+  </section>
   </div>
 </body>
 </div>
