--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
       </div>
     </div>
 
-    <div class="bot_nav_container">
+    <footer class="bot_nav_container">
       
         <ul class="ul_container">
           <li class="nav">Help Center</li>
@@ -196,18 +196,17 @@
 
 
 
-<section class="section">
+<div class="section">
   <div class="last_footer_wrapper">
 
-    <footer class="last_footer">
+    <div class="last_footer">
       <div class="footer_box">
         <ul class="footer_list">
         <li class="footer_par"><a href="#">&#169 2020 Remotely</li></a>
         <li class="footer_par"><a href="#">Privacy Policy</li></a>
         <li class="footer_par"><a href="#">Terms and Conditions</li></a>
-      </ul></div>
-    </footer>
-  </section>
+      </ul></div></footer>
+    </div></div>
   </div>
 </body>
 </div>
