most recent data

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 <div class="whole_page_wrapper">
 
 
-
-  <header class="header flex_container">
+  
+  <header class="header section flex_container">
     <div class="logo">ReMotely</div>
     <nav class="nav flex_container">
       <div class="link_flex_container"><a class="links" href="#">book</a><a class="links" href="#">explore</a>
