can't figure out whats wrong here

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 <div class="whole_page_wrapper">
 
 
-  
-  <header class="header section flex_container">
+  <header class="green">
+  <div divclass="section_wrapper  header flex_container">
     <div class="logo">ReMotely</div>
     <nav class="nav flex_container">
       <div class="link_flex_container"><a class="links" href="#">book</a><a class="links" href="#">explore</a>
@@ -27,7 +27,7 @@
       </div>
       <div class="sign_container"><a class="sign" href="#">sign in</a></div>
     </nav>
-  </header>
+  </div></header>
 
 
   <section class="section section_hero">
