--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 
   <header class="green">
-  <div divclass="section_wrapper  header flex_container">
+  <div class="section_wrapper section header flex_container">
     <div class="logo">ReMotely</div>
     <nav class="nav flex_container">
       <div class="link_flex_container"><a class="links" href="#">book</a><a class="links" href="#">explore</a>
@@ -27,8 +27,8 @@
       </div>
       <div class="sign_container"><a class="sign" href="#">sign in</a></div>
     </nav>
-  </div></header>
-
+  </div>
+</header>
 
   <section class="section section_hero">
     <div class="section_container">
