--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
   </div>
 </header>
 
-  <section class="section section_hero">
+<section class="green_section">
+  <div class=" section_hero">
     <div class="section_container">
       <div class="column phrase">
         <div class="catch_phrase">
@@ -47,8 +48,8 @@
       </div>
     </div>
     
-  </section>
-
+  </div>
+</section>
  
   <section class="section second_page_container">
     <h2 class="section_title">We offer a handpicked range of cabins for nature lovers in Europe to live and work
@@ -105,8 +106,8 @@
 
 
 
-
-  <section class="section third_page_container">
+<section class="pink">
+  <div class="section third_page_container">
     <div class="left_side">
       <div class="some_text">
         <h2 class="third_page_header">Work from somewhere special</h2>
@@ -124,8 +125,8 @@
     <div class="right_side">
       <img class="mountains_pic" src="mountain_home.png" alt="widok na góry">
     </div>
-  </section>
-
+  </div>
+</section>
 
 
 
