header position fixed

--- a/index.html
+++ b/index.html
@@ -15,10 +15,11 @@
 
 
 
-<div class="whole_page_wrapper">
+<div class="page_wrapper">
 
 
-  <header class="green">
+  <header class="position_rel">
+    <div class="position_fix green">
   <div class="section_wrapper section header flex_container">
     <div class="logo">ReMotely</div>
     <nav class="nav flex_container">
@@ -27,7 +28,7 @@
       </div>
       <div class="sign_container"><a class="sign" href="#">sign in</a></div>
     </nav>
-  </div>
+  </div></div>
 </header>
 
 <section class="green_section">
