fix page footer color and padding of sign in button

--- a/index.html
+++ b/index.html
@@ -198,15 +198,15 @@
 
 
 
-<div class="section">
+<div class="section foot_section">
   <div class="last_footer_wrapper">
 
     <div class="last_footer">
       <div class="footer_box">
         <ul class="footer_list">
-        <li class="footer_par"><a href="#">&#169 2020 Remotely</li></a>
-        <li class="footer_par"><a href="#">Privacy Policy</li></a>
-        <li class="footer_par"><a href="#">Terms and Conditions</li></a>
+        <li class="footer_par"><a class ="foot_link" href="#">&#169 2020 Remotely</li></a>
+        <li class="footer_par"><a class="foot_link" href="#">Privacy Policy</li></a>
+        <li class="footer_par"><a class="foot_link" href="#">Terms and Conditions</li></a>
       </ul></div></footer>
     </div></div>
   </div>
