fix html semantic

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           </div>
           <div class="column cottage">
             <div class="photo">
-              <img class="main_photo" src="switzphoto.jpg" alt="chatka ze Szwajcarii">
+              <img class="main_photo" src="./switzphoto.jpg" alt="chatka ze Szwajcarii">
             </div>
           </div>
         </div>
@@ -62,33 +62,39 @@
         <div class="pros_container">
           <div class="photo_description_container">
             <div class="pros_photo">
-              <img class="pros_pic" src="forest.png" alt="zdjęcie zalet">
+              <img class="pros_pic" src="./forest.png" alt="zdjęcie zalet">
             </div>
             <div class="header_container">
               <h3 class="paragraph_header">Connection</h3>
             </div>
             <div class="paragraph_description">
-              <p class="text">We provide a good internet connection <br> in our remotest cabins</p>
+              <p class="text">
+                We provide a good internet connection <br> in our remotest cabins
+              </p>
             </div>
           </div>
         </div>
         <div class="pros_container">
           <div class="photo_description_container">
             <div class="pros_photo high_way">
-              <img class="pros_pic" src="highway.png" alt="zdjęcie zalet">
+              <img class="pros_pic" src="./highway.png" alt="zdjęcie zalet">
             </div>
             <div class="header_container">
-              <h3 class="paragraph_header">Accesibility</h3>
+              <h3 class="paragraph_header">
+                Accesibility
+              </h3>
             </div>
             <div class="paragraph_description">
-              <p class="text">Every Cabin is up in the nature but also <br> easy to get to and to the towns around</p>
+              <p class="text">
+                Every Cabin is up in the nature but also <br> easy to get to and to the towns around
+              </p>
             </div>
           </div>
         </div>
         <div class="pros_container">
           <div class="photo_description_container">
             <div class="pros_photo">
-              <img class="pros_pic" src="mountains.png" alt="zdjęcie zalet">
+              <img class="pros_pic" src="./mountains.png" alt="zdjęcie zalet">
             </div>
             <div class="header_container">
               <h3 class="paragraph_header">Close to nature</h3>
@@ -104,41 +110,57 @@
       <div class="section third_page_container">
         <div class="left_side">
           <div class="some_text">
-            <h2 class="third_page_header">Work from somewhere special</h2>
-            <p class="longer_paragraph">We gather people who love nature and <br> mountains and help them find perfect
+            <h2 class="third_page_header">
+              Work from somewhere special
+            </h2>
+            <p class="longer_paragraph">
+              We gather people who love nature and <br> mountains and help them find perfect
               spots
               for <br> a few weeks or even
               months.
               If your job is fully <br> remote and you daydream of holidays, then why <br> sit at home? Work as you
               normally
               do and
-              later <br> let yourself dive into nature. Break the habit.</p>
+              later <br> let yourself dive into nature. Break the habit.
+            </p>
           </div>
           <div class="btn_third_sector">
-            <button class="book_now" type="submit"><span class="book">Book Now</span></button>
+            <button class="book_now" type="submit">
+              <span class="book">Book Now</span>
+            </button>
           </div>
         </div>
         <div class="right_side">
-          <img class="mountains_pic" src="mountain_home.png" alt="widok na góry">
+          <img class="mountains_pic" src="./mountain_home.png" alt="widok na góry">
         </div>
       </div>
     </section>
     <section class="section fourth_page_container">
       <div class="left_side_fourth_page">
         <div>
-          <img class="girl_pic" src="girl.png" alt="zdjęcie dziewczyny">
+          <img class="girl_pic" src="./girl.png" alt="zdjęcie dziewczyny">
         </div>
       </div>
       <div class="right_side_fourth_page">
         <div class="fan_number">
-          <p class="cabin_lovers">+2,000<br>cabin lovers</p>
+          <p class="cabin_lovers">
+            +2,000<br>cabin lovers
+          </p>
         </div>
         <div class="autor">
-          <div class="fourth_page_footer">Marina Skovic, Visual Artist</div>
+          <p class="fourth_page_footer">
+            Marina Skovic, Visual Artist
+          </p>
           <ul class="unordered_list_for_numbers">
-            <li class="numbers_fourth_page"><a class="anchor_number" href="#">1</li></a>
-            <li class="numbers_fourth_page"><a class="anchor_number" href="#">2</li></a>
-            <li class="numbers_fourth_page"><a class="anchor_number" href="#">3</li></a>
+            <li class="numbers_fourth_page">
+              <a class="anchor_number" href="#">1</a>
+            </li>
+            <li class="numbers_fourth_page">
+              <a class="anchor_number" href="#">2</a>
+            </li>
+            <li class="numbers_fourth_page">
+              <a class="anchor_number" href="#">3</a>
+            </li>
           </ul>
         </div>
       </div>
@@ -176,15 +198,16 @@
         <div class="last_footer">
           <div class="footer_box">
             <ul class="footer_list">
-              <li class="footer_par"><a class="foot_link" href="#">&#169 2020 Remotely</li></a>
-              <li class="footer_par"><a class="foot_link" href="#">Privacy Policy</li></a>
-              <li class="footer_par"><a class="foot_link" href="#">Terms and Conditions</li></a>
+              <li class="footer_par"><a class="foot_link" href="#">&copy; 2020 Remotely</a></li>
+              <li class="footer_par"><a class="foot_link" href="#">Privacy Policy</a></li>
+              <li class="footer_par"><a class="foot_link" href="#">Terms and Conditions</a></li>
             </ul>
           </div>
           </footer>
         </div>
       </div>
     </div>
+  </div>
 </body>
-</div>
+
 </html>
