fix styles, add prettierrc, oops layout problem!

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 
 <body>
   <div class="page_wrapper">
-    <header class="position_rel">
-      <div class="position_fix green">
+    <header class="header">
+      <div class="header_wrapper">
         <div class="section_wrapper section header flex_container">
           <h2 class="logo">
             ReMotely
@@ -67,7 +67,7 @@
             <div class="header_container">
               <h3 class="paragraph_header">Connection</h3>
             </div>
-            <div class="paragraph_description">
+            <div class="paragraph_description flex-j-center">
               <p class="text">
                 We provide a good internet connection <br> in our remotest cabins
               </p>
@@ -79,7 +79,7 @@
             <div class="pros_photo high_way">
               <img class="pros_pic" src="./highway.png" alt="zdjęcie zalet">
             </div>
-            <div class="header_container">
+            <div class="header_container flex-j-center">
               <h3 class="paragraph_header">
                 Accesibility
               </h3>
@@ -107,7 +107,7 @@
       </div>
     </section>
     <section class="pink">
-      <div class="section third_page_container">
+      <div class="flex section_wrapper">
         <div class="left_side">
           <div class="some_text">
             <h2 class="third_page_header">
@@ -193,7 +193,7 @@
           <li class="nav">Twitter</li>
       </div>
     </section>
-    <div class="section foot_section">
+    <footer class="section section_wrapper">
       <div class="last_footer_wrapper">
         <div class="last_footer">
           <div class="footer_box">
@@ -203,10 +203,9 @@
               <li class="footer_par"><a class="foot_link" href="#">Terms and Conditions</a></li>
             </ul>
           </div>
-          </footer>
         </div>
       </div>
-    </div>
+    </footer>
   </div>
 </body>
 
