fix some problems. There are only br tags and first ul to be done and I am finished this part of tasks

--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
 </head>
 
 <body>
+
   <div class="page_wrapper">
+
     <header class="header">
       <div class="header_wrapper">
         <div class="section_wrapper section header flex_container">
@@ -32,6 +34,8 @@
         </div>
       </div>
     </header>
+
+
     <section class="green_section">
       <div class=" section_hero">
         <div class="section_container">
@@ -47,14 +51,16 @@
           </div>
           <div class="column cottage">
             <div class="photo">
-              <img class="main_photo" src="./switzphoto.jpg" alt="chatka ze Szwajcarii">
+              <img class="main_photo" src="./switzphoto.jpg" alt="Swiss Cottage">
             </div>
           </div>
         </div>
       </div>
     </section>
+
+
     <section class="section second_page_container">
-      <h2 class="section_title">
+      <h2 class="section_heading">
         We offer a handpicked range of cabins for nature lovers in Europe to live and work
         from for desired time.
       </h2>
@@ -62,14 +68,14 @@
         <div class="pros_container">
           <div class="photo_description_container">
             <div class="pros_photo">
-              <img class="pros_pic" src="./forest.png" alt="zdjęcie zalet">
+              <img class="pros_pic" src="./forest.png" alt="pic of pros">
             </div>
             <div class="header_container">
               <h3 class="paragraph_header">Connection</h3>
             </div>
             <div class="paragraph_description flex-j-center">
               <p class="text">
-                We provide a good internet connection <br> in our remotest cabins
+                We provide a good internet connection <br>  in our remotest cabins
               </p>
             </div>
           </div>
@@ -77,7 +83,7 @@
         <div class="pros_container">
           <div class="photo_description_container">
             <div class="pros_photo high_way">
-              <img class="pros_pic" src="./highway.png" alt="zdjęcie zalet">
+              <img class="pros_pic" src="./highway.png" alt="pic of pros">
             </div>
             <div class="header_container flex-j-center">
               <h3 class="paragraph_header">
@@ -94,7 +100,7 @@
         <div class="pros_container">
           <div class="photo_description_container">
             <div class="pros_photo">
-              <img class="pros_pic" src="./mountains.png" alt="zdjęcie zalet">
+              <img class="pros_pic" src="./mountains.png" alt="pic of pros">
             </div>
             <div class="header_container">
               <h3 class="paragraph_header">Close to nature</h3>
@@ -106,6 +112,7 @@
         </div>
       </div>
     </section>
+    
     <section class="pink">
       <div class="flex section_wrapper">
         <div class="left_side">
@@ -131,14 +138,17 @@
           </div>
         </div>
         <div class="right_side">
-          <img class="mountains_pic" src="./mountain_home.png" alt="widok na góry">
+          <img class="mountains_pic" src="./mountain_home.png" alt="mountain view">
         </div>
       </div>
     </section>
-    <section class="section fourth_page_container">
+
+
+    <section class=" fourth_page_container">
+      <div class="flex section_wrapper">
       <div class="left_side_fourth_page">
         <div>
-          <img class="girl_pic" src="./girl.png" alt="zdjęcie dziewczyny">
+          <img class="girl_pic" src="./girl.png" alt="girl pic">
         </div>
       </div>
       <div class="right_side_fourth_page">
@@ -164,8 +174,13 @@
           </ul>
         </div>
       </div>
+      </div>
     </section>
+
+
+
     <section class="section fifth_page_container">
+      <div class="flex section_wrapper">
       <div class="newsletter">
         <div class="input_newsletter">
           <div class="input_header">
@@ -178,21 +193,25 @@
       </div>
       <div class="bot_nav_container">
         <ul class="ul_container">
-          <li class="nav">Help Center</li>
-          <li class="nav">Facebook</li>
-          <li class="nav">About</li>
+          <li class="nav"><a class="bot_list" href="#">Help Center</li></a>
+          <li class="nav"><a class="bot_list" href="#">Facebook</li></a>
+          <li class="nav"><a class="bot_list" href="#">About</li></a>
         </ul>
         <ul class="ul_container">
-          <li class="nav">FAQ</li>
-          <li class="nav">Contact</li>
-          <li class="nav">Instagram</li>
+          <li class="nav"><a class="bot_list" href="#">FAQ</li></a>
+          <li class="nav"><a class="bot_list"  href="#">Contact</li></a>
+          <li class="nav"><a class="bot_list" href="#">Instagram</li></a>
         </ul>
         <ul class="ul_container">
-          <li class="nav">Blog</li>
-          <li class="nav">Reviews</li>
-          <li class="nav">Twitter</li>
+          <li class="nav"><a class="bot_list" href="#">Blog</li></a>
+          <li class="nav"><a class="bot_list" href="#">Reviews</li></a>
+          <li class="nav"><a class="bot_list" href="#">Twitter</li></a>
       </div>
+    </div>
     </section>
+
+
+
     <footer class="section section_wrapper">
       <div class="last_footer_wrapper">
         <div class="last_footer">
