add list at the top menu

--- a/index.html
+++ b/index.html
@@ -21,12 +21,13 @@
           <h2 class="logo">
             ReMotely
           </h2>
+
           <nav class="nav flex_container">
-            <div class="link_flex_container">
-              <a class="links" href="#">book</a>
-              <a class="links" href="#">explore</a>
-              <a class="links" href="#">about</a>
-            </div>
+            <ul class="link_flex_container">
+              <li><a class="links" href="#">book</a></li>
+              <li><a class="links" href="#">explore</a></li>
+              <li><a class="links" href="#">about</a></li>
+            </ul>
             <div class="sign_container">
               <a class="sign" href="#">sign in</a>
             </div>
