add non breaking space in hero heading

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
           <div class="column phrase">
             <div class="catch_phrase">
               <h1 class="invite_phrase">
-                Work from <br> a cabin near Helsinki
+                Work from a&nbsp;cabin near Helsinki
               </h1>
               <div class=button_container>
                 <button class="btn" type="submit">Explore</button>
