finished acc to all comments

--- a/index.html
+++ b/index.html
@@ -194,19 +194,19 @@
       </div>
       <div class="bot_nav_container">
         <ul class="ul_container">
-          <li class="nav"><a class="bot_list" href="#">Help Center</li></a>
-          <li class="nav"><a class="bot_list" href="#">Facebook</li></a>
-          <li class="nav"><a class="bot_list" href="#">About</li></a>
+          <li class="nav"><a class="bot_list" href="#">Help Center</a></li>
+          <li class="nav"><a class="bot_list" href="#">Facebook</a></li>
+          <li class="nav"><a class="bot_list" href="#">About</a></li>
         </ul>
         <ul class="ul_container">
-          <li class="nav"><a class="bot_list" href="#">FAQ</li></a>
-          <li class="nav"><a class="bot_list"  href="#">Contact</li></a>
-          <li class="nav"><a class="bot_list" href="#">Instagram</li></a>
+          <li class="nav"><a class="bot_list" href="#">FAQ</a></li>
+          <li class="nav"><a class="bot_list"  href="#">Contact</a></li>
+          <li class="nav"><a class="bot_list" href="#">Instagram</a></li>
         </ul>
         <ul class="ul_container">
-          <li class="nav"><a class="bot_list" href="#">Blog</li></a>
-          <li class="nav"><a class="bot_list" href="#">Reviews</li></a>
-          <li class="nav"><a class="bot_list" href="#">Twitter</li></a>
+          <li class="nav"><a class="bot_list" href="#">Blog</a></li>
+          <li class="nav"><a class="bot_list" href="#">Reviews</a></li>
+          <li class="nav"><a class="bot_list" href="#">Twitter</a></li>
       </div>
     </div>
     </section>
